# smol-monadorville-example

./: CHANGELOG.md  Main.hs  cabal.project  smol-monadorville-example.cabal
